tentative fix for issue0004

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -1,10 +1,11 @@
 v1.1 2018-tbd
 
 Bugfixes:
-0006 Disqualified: new worker on top of another ant
 0005 Shaft/rail wraparound detection
+0006 Disqualified: new worker on top of another ant
 
 Enhancements:
 0001 LMs can get stuck next to the gardener
+0004 UM/LM clash at shaft head
 
 v1.0 2017-09-28 initial release
