fix for issue0009

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -5,6 +5,7 @@
 
 ### Enhancements:
 0007 Use the first possible shaft off rail1, too
+0009 UM should advance when friends block her return from a shaft not to be drilled
 
 ## v1.1 2018-01-15 patch release
 
