--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -1,3 +1,8 @@
+## In work
+
+### Bugfixes:
+0014 Windmill doesn't run on strict-mode controllers
+
 ## v1.2 2018-01-19 patch release
 
 ### Bugfixes:
