--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -1,3 +1,8 @@
+## In work
+
+### Enhancements:
+0015 LM meeting the engineer on a damaged rail can do more than just stop
+
 ## v1.3 2018-01-20 patch release
 
 ### Bugfixes:
