--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -4,6 +4,7 @@
 0017 Flawed defender logic in runQueenOperatingMineStrategy()
 
 ### Enhancements:
+0008 Deal with both staff in a miner's view
 0015 LM meeting the engineer on a damaged rail can do more than just stop
 
 ## v1.3 2018-01-20 patch release
