fix for issue0010

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -5,6 +5,7 @@
 
 ### Enhancements:
 0008 Deal with both staff in a miner's view
+0010 A miner-assisted engineer could be more courageous
 0015 LM meeting the engineer on a damaged rail can do more than just stop
 
 ## v1.3 2018-01-20 patch release
