fix for issue0019

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -1,3 +1,8 @@
+### In work:
+
+### Enhancements:
+0019 Confused miners' random walks should avoid traps
+
 ## v1.5 2018-02-16 patch release
 
 ### Enhancements:
