--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -1,3 +1,8 @@
+### In work:
+
+### Enhancements:
+0003 Enable UMs to leave home along RL when RM is occupied
+
 ## v1.5 2018-02-16 patch release
 
 ### Enhancements:
