fix for issue0022

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -1,5 +1,8 @@
 ### In work:
 
+### Bugfixes:
+0022 Confront bandits properly
+
 ### Enhancements:
 0019 Confused miners' random walks should avoid traps
 
