fix for issue0023

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -5,6 +5,7 @@
 
 ### Enhancements:
 0019 Confused miners' random walks should avoid traps
+0023 Defenders away from home could be more inventive
 
 ## v1.5 2018-02-16 patch release
 
