fix for issue0027

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -1,3 +1,8 @@
+## In work
+
+### Enhancements:
+0027 Derandomize the transition to lightspeed mode
+
 ## v1.7 2018-03-13 patch release
 
 ### Bugfixes:
