fix for issue0033

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -6,6 +6,7 @@
 ### Enhancements:
 0030 UM congestion in shafts
 0031 LM congestion in shafts
+0033 Defending against attackers like Vampire Mk.7
 
 ## v1.8 2018-03-16 patch release
 
