--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -1,4 +1,4 @@
-## In work
+## v1.9 2018-03-27 patch release
 
 ### Bugfixes:
 0032 Always check for a successful pattern match before trying to fix colors.
