--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -3,6 +3,9 @@
 ### Bugfixes:
 0035 Leeched by Lightspeed
 
+### Enhancements:
+0037 Review further defense options
+
 ## v1.9 2018-03-27 patch release
 
 ### Bugfixes:
