fix for issue0039

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -5,6 +5,7 @@
 
 ### Enhancements:
 0037 Review further defense options
+0039 Abandon the hub when hoarded food drops too low
 
 ## v1.9 2018-03-27 patch release
 
