fix for issue0042

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -1,3 +1,8 @@
+## In work
+
+### Enhancements:
+0042 UMs shouldn't obstruct laden friends even when the clock is broken
+
 ## v2.0 2018-06-05 patch release
 
 ### Bugfixes:
