--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -1,3 +1,8 @@
+## In work
+
+### Enhancements:
+0041 Miners should be careful not to obstruct the queen's emergency escape door
+
 ## v2.0 2018-06-05 patch release
 
 ### Bugfixes:
