fix for issue0021

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -1,6 +1,7 @@
 ## In work
 
 ### Enhancements:
+0021 Engineers can still get stuck.
 0041 Miners should be careful not to obstruct the queen's emergency escape door
 0042 UMs shouldn't obstruct laden friends even when the clock is broken
 
